# net-manthan

./: .gitignore  Cargo.toml  README.md  devinstall.sh
download_engine/: Cargo.toml
download_engine/src/: buf_writer_on_flush.rs  download.rs  download_config.rs  download_part.rs  download_part_backup.rs  download_parts.rs  download_thread.rs  lib.rs  open_file_writer.rs  types.rs  utils.rs
extension/: background.js  manifest.json
extensions/firefox/: background.js  downloading.json  manifest.json  popup.html  popup.js
extensions/native_messaging_config/firefox/: com.net.manthan.json
native-host/: Cargo.toml
native-host/src/: main.rs
native-messaging-config/: com.down_poc.native_messaging.json
net-manthan/: Cargo.toml
net-manthan-app/: Cargo.toml
net-manthan-app/cli/: Cargo.toml
net-manthan-app/cli/src/: main.rs  run.rs
net-manthan-app/download-manager/: Cargo.toml
net-manthan-app/download-manager/src/: constants.rs  download_db_manager.rs  download_manager.rs  ipc_server.rs  main.rs  progress_manager.rs
net-manthan-app/download_engine/: Cargo.toml
net-manthan-app/download_engine/src/: config.rs  download_part.rs  errors.rs  get_download_info.rs  lib.rs  progress_aggregator.rs  types.rs
net-manthan-app/native-message-host/: Cargo.toml  build.rs
net-manthan-app/native-message-host/src/: main.rs
net-manthan-app/net-manthan-core/: Cargo.toml
net-manthan-app/net-manthan-core/src/: config.rs  download_part.rs  get_download_info.rs  lib.rs  progress_aggregator.rs  types.rs
net-manthan-app/src/: lib.rs
net-manthan-app/ui/: Cargo.toml  Dioxus.toml
net-manthan-app/ui/assets/: dialog.css  main.css  sidebar.css  utils.css
net-manthan-app/ui/src/: main.rs
net-manthan-app/ui/src/components/: dialog.rs  mod.rs  sidebar.rs
net-manthan-app/utils/: Cargo.toml
net-manthan-app/utils/src/: lib.rs  logging.rs
net-manthan/src/: download_manager.rs  main.rs  net_manthan_config.rs  pretty_print_downloads.rs
temporary-gui/: index.html
temporary-gui/css/: app.css  colors.css  preflight.css  style.css
test-server/: Dockerfile  docker-compose.yml  generate_files.sh  nginx.conf
ui/: Cargo.toml  build.rs
ui/src/: components.rs  helpers.rs  main-backup.rs  main.rs  net_manthan_ui.rs  title_bar.rs  window_controls.rs
ui/src/components/: add_download_dialog.rs  downloads.rs  home.rs  input.rs  input_control.rs  net_manthan_ui.rs  side_bar.rs  text_input.rs  title_bar.rs  window_controls.rs
ui/src/components/title_bar/: window_controls.rs
ui/src/helpers/: client.rs  icon.rs  window.rs
utils/: Cargo.toml  build.rs
utils/proto/: rpc.proto
utils/src/: conversion.rs  lib.rs  logging.rs
utils/src/rpc/: message_codec.rs  mod.rs
utils/src/rpc/client/: mod.rs
utils/src/rpc/ipc_server/: mod.rs  native.rs
utils/src/rpc/server/: mod.rs  native.rs
