[workspace]
resolver = "3"
members = ["net-manthan", "ui", "utils"]
exclude = ["extensions", "net-manthan-app"]

[workspace.dependencies]
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.44.2", features = ["full"] }