[package]
name = "download_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tokio.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["stream"] }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4"] }
url = "2.5.4"
futures-util = "0.3.31"
pin-project-lite = "0.2.16"
futures = "0.3.31"