[package]
name = "download_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
reqwest = { version = "0.12.15", features = ["stream"] }
thiserror = "2.0.12"
uuid.workspace = true
url = "2.5.4"
futures-util = "0.3.31"
pin-project-lite = "0.2.16"
futures = "0.3.31"