[workspace]
resolver = "2"
members = [ "cli",
    "download-manager",
    "native-message-host",
    "net-manthan-core",
    "utils",
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
thiserror = { version = "2.0.11", default-features = false }
reqwest = { version = "0.12", features = ["stream"] }
colored = "3.0.0"
tracing = "0.1.41"
tracing-subscriber ={version = "0.3.19",features = ["env-filter"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
anyhow = "1.0.95"
bincode = "1.3.3"
chrono ={ version = "0.4.39", features = ["serde"] }