[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
gpui = { git = "https://github.com/zed-industries/zed", features = [
    "wayland",
    "x11",
    "font-kit",
] }
gpui_tokio = { git = "https://github.com/zed-industries/zed" }
ui = { git = "https://github.com/zed-industries/zed" }