[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
tracing.workspace = true
anyhow.workspace = true
gpui = { git = "https://github.com/zed-industries/zed", features = [
    "wayland",
    "x11",
    "font-kit",
] }
gpui_tokio = { git = "https://github.com/zed-industries/zed" }
ui = { git = "https://github.com/zed-industries/zed" }
unicode-segmentation = "1.12.0"
[target.'cfg(windows)'.dependencies]
windows = "0.61.1"