[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
download_engine = { path = "../download_engine" }
tracing.workspace = true
anyhow.workspace = true
gpui = { git = "https://github.com/zed-industries/zed", rev = "c74ecb4", features = [
    "wayland",
    "x11",
    "font-kit",
] }
gpui_tokio = { git = "https://github.com/zed-industries/zed", rev = "c74ecb4" }
ui = { git = "https://github.com/zed-industries/zed", rev = "c74ecb4" }
unicode-segmentation = "1.12.0"
rust-embed = "8.7.2"
[target.'cfg(windows)'.dependencies]
windows = "0.61.1"