[package]
name = "download-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
net-manthan-core = { path = "../net-manthan-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite = { version = "0.29.0", features = ["bundled"] }
anyhow = "1.0.95"

[dev-dependencies]
tempfile = "3.3"
