[package]
name = "download-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
net-manthan-core = { path = "../net-manthan-core" }
utils = { path = "../utils" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
bincode.workspace = true
chrono.workspace = true
uuid = { version = "1.14.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.3"