[package]
name = "download-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
download_engine = { path = "../download_engine" }
utils = { path = "../utils" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
bincode.workspace = true
chrono.workspace = true
uuid.workspace = true
toml.workspace = true
crossbeam-channel.workspace = true

[dev-dependencies]
tempfile = "3.3"