[package]
name = "download_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
colored.workspace = true
futures-util.workspace = true
crossbeam-channel.workspace = true
chrono.workspace = true
toml.workspace = true
anyhow.workspace = true
uuid.workspace = true
