[package]
name = "native-message-host"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
download_engine = { path = "../download_engine" }
serde.workspace = true
serde_json.workspace = true
chrome_native_messaging = "0.3.0"

[build-dependencies]
serde_json.workspace = true