[package]
name = "ui"
version = "0.1.0"
authors = ["Gopal <gopal.lohar.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
utils = { path = "../utils" }
download_engine = { path = "../download_engine" }
chrono.workspace = true
tokio.workspace = true

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]